results-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    appname: result-app
  name: result-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: result.k3s.localdev  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-app
            port: 
              number: 8082
